[package]
name = "rust_workshop"
version = "0.1.0"
authors = ["John Scarrott <johns@razorsecure.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "test"
harness = false